# mcp-server-allenheath-dlive

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
fake-dlive/: Cargo.toml
fake-dlive/src/: main.rs
lib/: Cargo.toml
lib/examples/: demo.rs
lib/src/: channels.rs  client.rs  codecs.rs  lib.rs  messages.rs
mcp-server/: Cargo.toml
mcp-server/src/: args.rs  auth.rs  handler.rs  instructions.md  lib.rs  main.rs  mcp_handler.rs
src/: dlive.rs  lib.rs  mcp_handler.rs
src/dlive/: codecs.rs  faders.rs  messages.rs  mod.rs
