[package]
name = "fake-dlive"
version = "0.1.0"
edition = "2024"

[dependencies]
allenheath-dlive = { path = "../lib" }
anyhow = "1.0.102"
futures = "0.3.32"
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
