[package]
name = "allenheath-dlive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
futures = "0.3.32"
hex = "0.4.3"
midi-stream = { git = "https://github.com/Benjamin-Davies/midi-stream.git", rev = "7101963c", features = ["tokio"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["macros", "net", "time", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
