[package]
name = "mcp-server-allenheath-dlive"
version = "0.1.0"
edition = "2024"

[dependencies]
allenheath-dlive = { path = "../lib" }
anyhow = "1.0.102"
axum = "0.8.8"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.32"
rmcp = { version = "1.4.0", features = ["transport-io", "transport-streamable-http-server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.51.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
